force-app/main/default/objects/Agent__c/Agent__c.object-meta.xml
<CustomObject>
    <description>Custom Object for panther school project,Sales agents and team members</description>
    <label>Agent</label>
    <nameField>
        <label>Agent</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>