force-app/main/default/objects/Agent__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>