force-app/main/default/objects/Agent__c/fields/Team_c__c.field-meta.xml
<CustomField>
    <fullName>Team_c__c</fullName>
    <label>Team__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>