force-app/main/default/objects/Agent__c/fields/Years_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_Experience__c</fullName>
    <label>Years_Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>