force-app/main/default/objects/Agent__c/validationRules/Agent_EmailFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>Agent_EmailFormat</fullName>
    <active>true</active>
    <description>Ensures proper email format</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK( Email_c__c )),
  NOT(REGEX( Email_c__c , &quot;^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Email_c__c</errorDisplayField>
    <errorMessage>Please enter a valid email address</errorMessage>
</ValidationRule>