force-app/main/default/objects/Agent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>Email_c__c</columns>
    <columns>Phone__c</columns>
    <columns>License_Number__c</columns>
    <columns>Specialization__c</columns>
    <columns>Years_Experience__c</columns>
    <columns>Team_c__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>